fix(header): add phone number on mobile

--- a/src/assets/styles/common/_header.scss
+++ b/src/assets/styles/common/_header.scss
@@ -11,6 +11,11 @@
     align-items: center;
     width: 100%;
   }
+
+  &__controls {
+    display: none;
+    align-items: center;
+  }
   &__btn{
     display: flex;
     flex-direction: column;
@@ -20,7 +25,6 @@
     width: 40px;
     height: 40px;
     background: transparent;
-    display: none;
     .bars{
       display: block;
       width: 26px;
@@ -140,7 +144,7 @@
 
 @media(max-width: 1216px) {
   .header {
-    &__btn{
+    &__controls{
       display: flex;
     }
     &__nav{
@@ -186,4 +190,15 @@
       }
     }
   }
+}
+
+@media (max-width: 450px) {
+  .header {
+    &__controls-number{
+      font-size: 12px;
+      img{
+        display: none;
+      }
+    }
+  } 
 }
