--- a/src/assets/styles/common/_headerTop.scss
+++ b/src/assets/styles/common/_headerTop.scss
@@ -170,3 +170,11 @@
     }
   }
 }
+
+@media(max-width: 450px) {
+  .header-top {
+      .logo img{
+        width: 160px;
+      }
+  }
+}
